fix: address input inventory and benchmark review findings